; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/bpf/extr_jit.c_mem_ldx_emem.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/bpf/extr_jit.c_mem_ldx_emem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfp_prog = type { i32 }
%struct.nfp_insn_meta = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfp_prog*, %struct.nfp_insn_meta*, i32)* @mem_ldx_emem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mem_ldx_emem(%struct.nfp_prog* %0, %struct.nfp_insn_meta* %1, i32 %2) #0 {
  %4 = alloca %struct.nfp_prog*, align 8
  %5 = alloca %struct.nfp_insn_meta*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.nfp_prog* %0, %struct.nfp_prog** %4, align 8
  store %struct.nfp_insn_meta* %1, %struct.nfp_insn_meta** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.nfp_prog*, %struct.nfp_prog** %4, align 8
  %9 = load %struct.nfp_insn_meta*, %struct.nfp_insn_meta** %5, align 8
  %10 = getelementptr inbounds %struct.nfp_insn_meta, %struct.nfp_insn_meta* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.nfp_prog*, %struct.nfp_prog** %4, align 8
  %14 = call i32 @imm_b(%struct.nfp_prog* %13)
  %15 = call i32 @re_load_imm_any(%struct.nfp_prog* %8, i32 %12, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load %struct.nfp_prog*, %struct.nfp_prog** %4, align 8
  %17 = load %struct.nfp_insn_meta*, %struct.nfp_insn_meta** %5, align 8
  %18 = load %struct.nfp_insn_meta*, %struct.nfp_insn_meta** %5, align 8
  %19 = getelementptr inbounds %struct.nfp_insn_meta, %struct.nfp_insn_meta* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = mul nsw i32 %21, 2
  %23 = load i32, i32* %7, align 4
  %24 = load %struct.nfp_insn_meta*, %struct.nfp_insn_meta** %5, align 8
  %25 = getelementptr inbounds %struct.nfp_insn_meta, %struct.nfp_insn_meta* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = mul nsw i32 %27, 2
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @data_ld_host_order_addr40(%struct.nfp_prog* %16, %struct.nfp_insn_meta* %17, i32 %22, i32 %23, i32 %28, i32 %29)
  ret i32 %30
}

declare dso_local i32 @re_load_imm_any(%struct.nfp_prog*, i32, i32) #1

declare dso_local i32 @imm_b(%struct.nfp_prog*) #1

declare dso_local i32 @data_ld_host_order_addr40(%struct.nfp_prog*, %struct.nfp_insn_meta*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
